@@ -107,6 +107,7 @@ tasks {
                 "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
                 "--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
                 "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
                 "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
                 "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
                 // Required because the Checker Framework reflectively accesses private members in com.sun.tools.javac.comp.
